--- a/scss/pc/products/products.scss
+++ b/scss/pc/products/products.scss
@@ -571,6 +571,7 @@
     }
     .shop-sidebar {
       width: 100%;
+      position: static;
       display: flex;
       flex-wrap: wrap;
       gap: 12px;
